<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--http相关文言信息-->
    <string name="timeoute_error">连接超时</string>
    <string name="networke_error">网络错误</string>
    <string name="no_connection_error">连接错误</string>
    <string name="authfailure_error">认证错误</string>
    <string name="protocol_analyze_error">协议解析错误</string>
    <string name="resource_not_find_error">资源未找到</string>
    <string name="service_conn_num_out_error">连接数超出最大数</string>
    <string name="authorization_error">Authorization 证书问题</string>
    <string name="server_error">服务器连接错误</string>

    <string name="session_fail">session失效</string>
    <string name="check_code_fail">验证码失效</string>
    <!--http相关文言信息-->


    <string name="user_name">用户名:</string>
    <string name="user_password">密码:</string>
    <string name="requrie_check_num">获取验证码</string>
    <string name="check_num">验证码:</string>
    <string name="login">登录</string>
    <string name="dialog_ok">确定</string>
    <string name="note_popupwindow_title">提示信息!</string>
</resources>
