<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@mipmap/login_logo" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:stretchColumns="1,2" >

        <TableRow android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/user_name"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_span="3" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/user_password" />

            <EditText
                android:id="@+id/user_password"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:layout_span="2"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/check_num" />

            <EditText
                android:id="@+id/check_num"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/get_check_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/requrie_check_code"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/requrie_check_num"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:id="@+id/login_btn"
        android:background="@drawable/login_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/login"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white" />
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_state"
            android:src="@drawable/login_loading_bg"
            android:visibility="gone"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

</LinearLayout>